Do not use read-only option as udisksctl does

BUG: 428962